# mitmproxy-mcp

./: .mcp.json  Dockerfile  Plan.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  setup.md
.claude/: settings.local.json
.github/workflows/: pylint.yml
migrations/: 001_initial.sql
src/mitmproxy_mcp/: addon.py  app_state.py  config.py  db.py  db_writer.py  json_utils.py  main.py  mcp_server.py  protection.py  queue_types.py
